<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="itp341.lee.testdemo.viewmodel.MainActivityViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity">

        <EditText
            android:id="@+id/coffee_shop_edit_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="New Coffee Shop Name"
            android:text="@={viewmodel.latestCoffeeShopName}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            app:layout_constraintStart_toStartOf="@id/coffee_shop_edit_text"
            app:layout_constraintEnd_toEndOf="@id/coffee_shop_edit_text"
            app:layout_constraintTop_toBottomOf="@id/coffee_shop_edit_text"
            android:onClick="@{() -> viewmodel.add()}"
            />

        <TextView
            android:id="@+id/coffee_shop_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coffee_shop_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/latest_coffee_shop_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@{viewmodel.latestCoffeeShop.name}"
            app:layout_constraintStart_toStartOf="@id/coffee_shop_label"
            app:layout_constraintBottom_toTopOf="@id/coffee_shop_label"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
